# map-descriptors2

./: .gitignore  Cargo.toml  README.md  flake.nix  local_history.patch  package-lock.json  package.json
crates/coordinator/descriptors/: Cargo.toml
crates/coordinator/descriptors/src/: error.rs  helpers.rs  holon_descriptor_queries.rs  holon_descriptor_storage_fns.rs  lib.rs  mutators.rs  property_descriptor_queries.rs  property_descriptor_storage_fns.rs  property_map_builder.rs  stub_data_creator.rs  value_descriptor_queries.rs  value_descriptor_storage_fns.rs
crates/coordinator/descriptors/tests/: create_tests.rs  delete_tests.rs  delete_tests_obsolete.rs  descriptor_tests.rs  get_tests.rs  get_tests_obsolete.rs  holon_descriptor_tests.rs  holon_descriptor_tests_with_fixtures.rs  holon_descriptor_updates_tests.rs  holon_descriptor_updates_tests_with_fixtures.rs  property_descriptor_tests.rs  property_descriptor_updates_tests.rs  shared_property_descriptor_tests.rs  shared_value_descriptor_tests.rs  update_tests.rs  update_tests_obsolete.rs  value_descriptor_tests.rs  value_descriptor_updates_tests.rs
crates/coordinator/descriptors/tests/conductor/: mod.rs
crates/coordinator/descriptors/tests/shared_test/: data_fixtures.rs  fixture_defs.rs  fixture_helpers.rs  holon_descriptor_fixtures.rs  mod.rs  property_descriptor_data_creators.rs  property_descriptor_fixtures.rs  test_data_types.rs  value_descriptor_fixtures.rs
crates/integrity/descriptors_integrity/: Cargo.toml
crates/integrity/descriptors_integrity/src/: error.rs  holon_descriptor_validators.rs  lib.rs  property_descriptor_validators.rs  value_descriptor_validators.rs
crates/shared_types/descriptor/: Cargo.toml
crates/shared_types/descriptor/src/: error.rs  holon_descriptor.rs  lib.rs  property_descriptor.rs  type_header.rs
crates/workdir/: dna.yaml
dnas/map_descriptors/workdir/: dna.yaml
dnas/map_descriptors/zomes/coordinator/descriptors/: Cargo.toml
dnas/map_descriptors/zomes/coordinator/descriptors/src/: all_holon_types.rs  holon_descriptor.rs  lib.rs  type_header.rs
dnas/map_descriptors/zomes/integrity/descriptors/: Cargo.toml
dnas/map_descriptors/zomes/integrity/descriptors/src/: holon_descriptor.rs  lib.rs  type_header.rs
tests/src/map_descriptors/descriptors/: all-holon-types.test.ts  all-property-descriptors.test.ts  all-value-descriptors.testts  common.ts  holon-descriptor.testts  property-descriptor.test.ts  type-header.test.ts  value-descriptor.testts
ui/: index.html  package.json
ui/src/: holochain-app.ts
ui/src/map_descriptors/descriptors/: all-holon-types.ts  all-property-descriptors.ts  all-value-descriptors.ts  create-holon-descriptor.ts  create-property-descriptor.ts  create-type-header.ts  create-value-descriptor.ts  edit-holon-descriptor.ts  edit-property-descriptor.ts  edit-value-descriptor.ts  holon-descriptor-detail.ts  property-descriptor-detail.ts  type-header-detail.ts  types.ts  value-descriptor-detail.ts
workdir/: dna.yaml  happ.yaml  web-happ.yaml
