[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["crates/coordinator/descriptors",
    "crates/integrity/descriptors_integrity",
    "crates/shared_types/descriptor"
]

[workspace.dependencies]
hdi = "=0.2.2"
hdk = "=0.1.2"
serde = "1"
derive-new = "0.5"

[workspace.dependencies.descriptors]
path = "crates/coordinator/descriptors"

[workspace.dependencies.descriptors_integrity]
path = "crates/integrity/descriptors_integrity"

[workspace.dependencies.shared_types_descriptor]
path = "crates/shared_types/descriptor"
