[package]
name = "descriptors"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "descriptors"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }
thiserror = { workspace = true }

descriptors_integrity = { workspace = true }
shared_types_descriptor = {workspace = true}
