[package]
name = "descriptors"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "descriptors"

[dependencies]
hdk = { workspace = true }


serde = { workspace = true }
thiserror = { workspace = true }

descriptors_integrity = { workspace = true }
shared_types_descriptor = { workspace = true }


[dev-dependencies]
holochain = { default-features = false, features = ["test_utils"] }
tokio = { version = "1.3", features = ["full"] }
futures = { version = "0.3.1", default-features = false }
rstest = "0.18.1"
async-std = "1.12.0"
log = "0.4"
console_log = "0.2"

# path = "../../../workdir/dna"
