[package]
name = "descriptors"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "descriptors"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
descriptors_integrity = { workspace = true }
shared_types_descriptor = { workspace = true }
tracing = "0.1.37"
tracing-core = "0.1.30"
tracing-serde = "0.1.3"

[dev-dependencies]
holochain = { default-features = false, features = ["test_utils"] }
tokio = { version = "1.3", features = ["full"] }
futures = { version = "0.3.1", default-features = false }
rstest = "0.18.1"
async-std = "1.12.0"
log = { version = "0.4.2", features = [
    "max_level_info",
    "release_max_level_error",
    "serde",
] }
env_logger = "0.10.1"
test-log = "0.2.13"
# tracing = "0.1.5"
# tracing-futures = "0.2.5"
# tracing-subscriber = "0.3"
